# DFIR_Log_Parser

./: .gitignore  README.md  setup.sh  start.sh
apps/EventLogParser/: .gitignore  Cargo.toml  README.md  start.sh
apps/EventLogParser/rules/: detections.yml
apps/EventLogParser/src/: api.rs  db.rs  error.rs  ingest.rs  main.rs  models.rs  parser.rs  state.rs  stats_query.rs  utils.rs
apps/EventLogParser/web/: package-lock.json  package.json  tailwind.config.js
apps/EventLogParser/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/EventLogParser/web/app/detections/: page.tsx
apps/EventLogParser/web/app/event/[id]/: page.tsx
apps/EventLogParser/web/app/events/: page.tsx
apps/EventLogParser/web/app/forensics/: page.tsx
apps/EventLogParser/web/app/ingest/: page.tsx
apps/EventLogParser/web/app/processes/: page.tsx
apps/EventLogParser/web/app/report/: page.tsx
apps/EventLogParser/web/app/search/: page.tsx
apps/EventLogParser/web/app/stats/: loading.tsx  page.tsx
apps/EventLogParser/web/app/timeline/: page.tsx
apps/EventLogParser/web/components/: context-menu.tsx  event-filters.tsx  event-table.tsx  nav-hotkeys.tsx  process-tree.tsx  react-query-provider.tsx  sidebar.tsx  timeline-chart.tsx  top-header.tsx
apps/EventLogParser/web/hooks/: useApi.ts  useCaseFileStore.ts  useForensicsStore.ts
apps/EventLogParser/web/lib/api/: index.ts
apps/EventLogParser/web/styles/: print.css
apps/EventLogParser/web/ui/: card.tsx  drawer.tsx
apps/Log_parser/: .gitignore  Cargo.toml  README.md
apps/Log_parser/src/: detection.rs  main.rs  search.rs
apps/Log_parser/web/: detection.html  detection.js  index.html  script.js  style.css
apps/Log_parser/web/assets/: index-C7_FxJRa.js  index-x7f24e0d.css
landing/: index.html
