[package]
name = "event-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.13"
dotenvy = "0.15"
evtx = "0.8"
indexmap = { version = "=2.2.6" }
rayon = { version = "=1.8.0" }
rayon-core = { version = "=1.12.1" }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled", "functions", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
time = { version = "=0.3.36", default-features = false }
crossbeam-channel = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
pest = "=2.7.10"
pest_derive = "=2.7.10"
pulldown-cmark = "0.9"

[dev-dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
